Salesforce/force-app/main/default/objects/Postcode_State_Range__mdt/Postcode_State_Range__mdt.object-meta.xml
<CustomObject>
    <description>Lists ranges of postcodes that are valid for a given state.</description>
    <label>Postcode/State Range</label>
    <pluralLabel>Postcode/State Ranges</pluralLabel>
</CustomObject>