Salesforce/force-app/main/default/objects/Postcode_State_Range__mdt/fields/Postcode_From__c.field-meta.xml
<CustomField>
    <fullName>Postcode_From__c</fullName>
    <description>The lowest postcode in the allowed range (inclusive).</description>
    <inlineHelpText>The lowest postcode in the allowed range (inclusive).</inlineHelpText>
    <label>Postcode From</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>