Salesforce/force-app/main/default/objects/Postcode_State_Range__mdt/fields/Postcode_To__c.field-meta.xml
<CustomField>
    <fullName>Postcode_To__c</fullName>
    <description>The highest postcode in the allowed range (inclusive).  If the range consists of a single postcode, then enter said post code in both fields.</description>
    <inlineHelpText>The highest postcode in the allowed range (inclusive).  If the range consists of a single postcode, then enter said post code in both fields.</inlineHelpText>
    <label>Postcode To</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>