Salesforce/force-app/main/default/objects/Postcode_State_Range__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>The state this postcode range is belongs to.</description>
    <inlineHelpText>The state this postcode range is belongs to.</inlineHelpText>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACT</fullName>
                    <default>true</default>
                    <label>ACT</label>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>