Salesforce/force-app/main/default/objects/Postcode_State_Range__mdt/validationRules/Postcode_From_cannot_be_greater_than_To.validationRule-meta.xml
<ValidationRule>
    <fullName>Postcode_From_cannot_be_greater_than_To</fullName>
    <active>true</active>
    <description>The Postcode From value must not be greater than the Postcode To value.</description>
    <errorConditionFormula>Postcode_From__c &gt; Postcode_To__c</errorConditionFormula>
    <errorDisplayField>Postcode_To__c</errorDisplayField>
    <errorMessage>The Postcode From value must not be greater than the Postcode To value.</errorMessage>
</ValidationRule>