Salesforce/force-app/main/default/objects/Postcode_State_Range__mdt/validationRules/Postcode_From_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Postcode_From_must_be_positive</fullName>
    <active>true</active>
    <description>Postcode From must contain a positive value.</description>
    <errorConditionFormula>Postcode_From__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Postcode_From__c</errorDisplayField>
    <errorMessage>Postcode From must contain a positive value.</errorMessage>
</ValidationRule>