Salesforce/force-app/main/default/objects/Postcode_State_Range__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>State__c</columns>
    <columns>Postcode_From__c</columns>
    <columns>Postcode_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>